Fix sidebar hover on mobile

--- a/api/app/assets/stylesheets/site.scss
+++ b/api/app/assets/stylesheets/site.scss
@@ -448,7 +448,7 @@ section {
                 background-size: auto 100%;
                 transition-duration: $anim-fast;
                 &:hover {
-                    background-size: auto 110%;
+                    background-size: auto 120%;
                     transition-duration: $anim-fast;
                     color: #000;
                 }
@@ -458,7 +458,7 @@ section {
                 background-size: auto 100%;
                 transition-duration: $anim-fast;
                 &:hover {
-                    background-size: auto 110%;
+                    background-size: auto 120%;
                     transition-duration: $anim-fast;
                     color: #000;
                 }
@@ -468,7 +468,7 @@ section {
                 background-size: auto 100%;
                 transition-duration: $anim-fast;
                 &:hover {
-                    background-size: auto 110%;
+                    background-size: auto 120%;
                     transition-duration: $anim-fast;
                     color: #000;
                 }
@@ -478,7 +478,7 @@ section {
                 background-size: auto 100%;
                 transition-duration: $anim-fast;
                 &:hover {
-                    background-size: auto 110%;
+                    background-size: auto 120%;
                     transition-duration: $anim-fast;
                     color: #000;
                 }
@@ -488,7 +488,7 @@ section {
                 background-size: auto 100%;
                 transition-duration: $anim-fast;
                 &:hover {
-                    background-size: auto 110%;
+                    background-size: auto 120%;
                     transition-duration: $anim-fast;
                     color: #000;
                 }
@@ -498,7 +498,7 @@ section {
                 background-size: auto 100%;
                 transition-duration: $anim-fast;
                 &:hover {
-                    background-size: auto 110%;
+                    background-size: auto 120%;
                     transition-duration: $anim-fast;
                     color: #000;
                 }
